# the-insecure-proxy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE.txt  README.md  config.ru  gitlab.Dockerfile  renovate.json  rust-toolchain.toml  the-insecure-proxy.gemspec
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  service.yaml
lib/the-insecure-proxy/: proxy.rb  streaming_body_rewriter.rb  version.rb
lib/the/insecure/: proxy.rb
spec/: spec_helper.rb
spec/the-insecure-proxy/: streaming_body_rewriter_spec.rb
spec/the/insecure/: proxy_spec.rb
src/: https_url_rewriter.rs  main.rs  proxy_error.rs  the_insecure_proxy.rs
