[package]
name = "the_insecure_proxy"
version = "2.0.0-alpha1"
edition = "2021"

[[bin]]
name = "the-insecure-proxy"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bytes = { version = "1" }
hyper = { version = "1.0", features = ["http1", "client", "server", "runtime"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = { version = "0.5" }
http = { version = "1.1" }
