[package]
name = "the_insecure_proxy"
version = "2.0.0-alpha1"
edition = "2021"

[[bin]]
name = "the-insecure-proxy"
path = "src/main.rs"
test = true
bench = false

[dependencies]
bytes = { version = "1.8.0" }
hyper = { version = "1", features = ["http1", "client", "server"] }
tokio = { version = "1.41.0", features = ["full"] }
hyper-tls = { version = "0.6" }
http = { version = "1.1" }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
